log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 11:03:05 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
96cc939
Thu 30 Mar 2023 11:06:16 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:19:16: error: expected ‘;’ before ‘return’
   19 |   array->size=0
      |                ^
      |                ;
   20 | 
   21 |   return array;
      |   ~~~~~~        
arraylist.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
78f0c3c
Thu 30 Mar 2023 11:06:23 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4341c31
Thu 30 Mar 2023 11:10:24 PM UTC: 
 arraylist.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
eb646a4
Thu 30 Mar 2023 11:12:17 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|4
total_score: 20/70
f0eb83c
Thu 30 Mar 2023 11:14:47 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
1f2c9fc
Thu 30 Mar 2023 11:15:04 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
48358cb
Thu 30 Mar 2023 11:20:42 PM UTC: 
 arraylist.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
a88a53f
Thu 30 Mar 2023 11:20:54 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
852b11a
Thu 30 Mar 2023 11:21:34 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 30/70
b794d64
Thu 30 Mar 2023 11:22:21 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e840ffd
Thu 30 Mar 2023 11:22:56 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
f8aa6cf
Thu 30 Mar 2023 11:23:11 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7bd34ec
Thu 30 Mar 2023 11:23:41 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d8d8053
Thu 30 Mar 2023 11:23:53 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
b2d8b7d
Fri 31 Mar 2023 12:37:46 AM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:58:10: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
   58 |   return i;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
7b53f06
Fri 31 Mar 2023 12:38:25 AM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
cc0d392
Fri 31 Mar 2023 12:43:20 AM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|3
total_score: 30/70
2fe1cee
Fri 31 Mar 2023 12:43:46 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/70
66e681d
Fri 31 Mar 2023 12:53:32 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/70
8543961
Fri 31 Mar 2023 12:54:10 AM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 30/70
6ec88a9
Fri 31 Mar 2023 12:54:27 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/70
71eb5a9
Fri 31 Mar 2023 01:00:02 AM UTC: 
 arraylist.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
0560c28
Fri 31 Mar 2023 01:00:25 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
04812a3
Fri 31 Mar 2023 01:01:03 AM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
edcb993
Fri 31 Mar 2023 01:01:30 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c34947e
Fri 31 Mar 2023 01:03:15 AM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|2
total_score: 40/70
3429e10
Fri 31 Mar 2023 01:05:10 AM UTC: 
 arraylist.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  8|2
total_score: 40/70
67ba373
Fri 31 Mar 2023 01:14:26 AM UTC: 
 arraylist.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  8|2
total_score: 40/70
0d13fae
Fri 31 Mar 2023 01:16:05 AM UTC: 
 arraylist.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  10|2
total_score: 40/70
87d27ff
Fri 31 Mar 2023 01:17:20 AM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 50/70
62ddb2f
Fri 31 Mar 2023 02:19:25 AM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|1
total_score: 50/70
6156ab3
Fri 31 Mar 2023 05:13:09 PM UTC: 
 arraylist.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  11|1
total_score: 50/70
9a4b423
